--- a/bootboard/src/main/resources/application.yml
+++ b/bootboard/src/main/resources/application.yml
@@ -11,4 +11,11 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: debug
+        type.descriptor.sql: trace
    
